syntax = "proto3";

import "homectl-clients-protocol/Resources.proto";

option csharp_namespace = "HomeCtl.Servers.ApiServer";

package homectl.servers.apiserver;

service Records {
	rpc StoreRecord (StoreRecordRequest) returns (StoreRecordResponse);
}

message StoreRecordRequest {
	homectl.clients.ResourceDocument resourceRecord = 1;
}

message StoreRecordResponse {
	StoreResultType storeResult = 1;
	enum StoreResultType {
		UNSAVED = 0;
		CREATED = 1;
		UPDATED = 2;
	}
}